# cnn-classifier

./: README.md  main.py  pyproject.toml  requirements.txt  scores.json  tmpszbhi68c.bat
research/: 01_data_ingestion.ipynb  02_prepare_base_model.ipynb  03_model_trainer.ipynb  trials.ipynb
src/cnnClassifier/components/: model_trainer.py  prepare_base_model.py
src/cnnClassifier/config/: configuration.py
src/your_project_name.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
