[build-system]
requires = ["setuptools", "wheel"]  # or other build backends like "poetry"
build-backend = "setuptools.build_meta"  # or "poetry.core.masonry.api" for Poetry projects

[project]
name = "your_project_name"
version = "0.1.0"
description = "A description of your project"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
dependencies = ["requests", "numpy>=1.20.0"]

